First commit for fixing spacing on the right section.

--- a/less/index.less
+++ b/less/index.less
@@ -239,7 +239,14 @@ html, body {
 		.right {
 			width: 50%;
 			margin: 1%;
+			display:flex;
+			flex-direction: column;
+			justify-content: space-around;
 	
+			.rightBoxes {
+				width:100%
+			}
+
 			.work {
 				display: flex;
 
